# ibicus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Makefile  README.rst  environment-minver.yml  environment.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  on-push.yml
PACKAGE_NAME/: __init__.py  __meta__.py  _variables.py  debiaser.py  delta_quantile_mapping.py  isimip.py  isimip_options.py  linear_scaling.py  math_helpers.py  quantile_delta_mapping.py  quantile_mapping.py  sample.py  scaled_distribution_mapping.py  switanek2017.py  test_debiasers.ipynb  test_isimip.ipynb  utils.py  variable_distribution_match.py  variables.py
PACKAGE_NAME/debias/: __init__.py  _cdft.py  _debiaser.py  _delta_change.py  _ecdfm.py  _equidistant_cdf_matching.py  _isimip.py  _isimip_options.py  _linear_scaling.py  _quantile_delta_mapping.py  _quantile_mapping.py  _scaled_distribution_mapping.py
PACKAGE_NAME/evaluate/: EOT.py  GEV.py  __init__.py  assumptions.py  correlation.py  correlation_analysis.py  dictionary.py  evaluation_functions.py  exceedance_over_threshold.py  marginal.py  marginal_edit.py  metrics.py  multivariate.py  spatial.py  spatiotemporal_correlation.py  spatiotemporal_extent.py  test_assumptions.py  testing_assumptions.py  trend.py  trend_analysis.py
PACKAGE_NAME/utils/: __init__.py  _math_utils.py  _running_window_mode.py  _utils.py
docs/: README.rst  requirements.txt
docs/source/: conf.py  index.rst
ibicus/: __init__.py  __meta__.py  __version__.py  variables.py
ibicus/debias/: __init__.py  _cdft.py  _debiaser.py  _delta_change.py  _ecdfm.py  _isimip.py  _isimip_options.py  _linear_scaling.py  _quantile_delta_mapping.py  _quantile_mapping.py  _xclim.py  (+2 more)
notebooks/: 00 Download and Preprocess.ipynb  01 Download and Preprocess.ipynb  01 Getting Started.ipynb  02 Adjusting Debiasers.ipynb  03 Adjusting Debiasers.ipynb  03 Evaluation.ipynb  04 Evaluation.ipynb  04 ISIMIP Consistency.ipynb  04 Parallelization and Advanced Topics.ipynb  04 Parallelization and Dask.ipynb  05 ISIMIP Consistency.ipynb  05 Parallelization and Dask.ipynb  bc_comparison_and_evaluation.ipynb  compare_ISIMIP_with_our_code-Copy1.ipynb  compare_ISIMIP_with_our_code.ipynb  debiasers_comparison_and_evaluation.ipynb  debiasers_comparison_and_evaluation_v2.ipynb  debiasers_comparison_and_evaluation_v3.ipynb  debiasers_comparison_and_evaluation_v4.ipynb  debiasers_comparison_and_evaluation_v5.ipynb  debugging_fiona.ipynb  download_and_preprocess_cds.ipynb  download_testing_data.ipynb  evaluation_notebook.ipynb  evaluation_notebook_v2.ipynb  evaluation_notebook_v3.ipynb  evaluation_notebook_v4.ipynb  evaluation_notebook_v5.ipynb  evaluation_workflow_v1.ipynb  evaluation_workflow_v2.ipynb  getting_started.ipynb  getting_started_v2.ipynb  isimip_consistency.ipynb  isimip_output.txt  isimip_workflow.ipynb  playing_around_evaluation.ipynb  test_debiasers.ipynb  test_isimip.ipynb  test_isimip_with_code.ipynb  testing_evaluate_class.ipynb  (+3 more)
tests/: test_cdft.py  test_debias_helpers.py  test_debiaser.py  test_delta_change.py  test_ecdfm.py  test_equidistant_cdf_matching.py  test_full_isimip_against_reference.py  test_handling_and_trend_preservation_all_debiasers.py  test_isimip.py  test_isimip_helpers.py  test_linear_scaling.py  test_math_utils.py  test_quantile_delta_mapping.py  test_quantile_mapping.py  test_running_window_mode.py  test_sample.py  test_scaled_distribution_mapping.py  test_utils.py
(+86 files in other folders)
