[metadata]
name = attr:.__meta__.__name__
version = attr:.__meta__.__version__
author = attr:.__meta__.__author__
author_email = attr:.__meta__.__author_email__
license = attr:.__meta__.__license__
description = attr:.__meta__.__description__
long_description_content_type=text/markdown
long_description = file: README.rst
url = https://github.com/ecmwf-projects/ibicus
project_urls =
    Documentation = https://ibicus.readthedocs.io/en/latest/
    Source = https://github.com/ecmwf-projects/ibicus
    Tracker = https://github.com/ecmwf-projects/ibicus/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.22
    attrs>=21.3.0
    pandas
    matplotlib
    seasborn
    scipy
    statsmodels
    scikit-learn
    tqdm


[flake8]
extend-ignore = E501, W503, E203
per-file-ignores =
    ibicus/debias/__init__.py: F401, F403
    ibicus/debias/_isimip.py: E721

[mypy]
strict = False

[pydocstyle]
ignore = D4,D2
